[package]
name = "ambidex_survival"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"
bevy_rapier2d = "0.27"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

