[package]
name = "ambidex_survival"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17.3"
bevy_rapier2d = "0.32.0"
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
uuid = { version = "1.19", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
pedantic = "warn"
nursery = "warn"
